--- a/index.html
+++ b/index.html
@@ -39,34 +39,24 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
+								<br>
+								<p>I'm a Ph.D. student working in the Syntax, Semantics, and Sentence Processing Lab with Masaya Yoshida at Northwestern
+									University. My interests are spread across formal syntax, psycholinguistics, sentence processing, acquisition, and 
+									east asian languages, particularly Mandarin, Japanese, Korean. In addition, I am also a certified ESL/EFL instructor both
+									privately and at Northwestern English Language Programs. Besides my work, I really love learning languages,
+									playing and curating music, cooking, and hiking. If you want to share some music (I always love to),
+									you can follow what I'm listening to <a href="https://www.last.fm/user/devinj1121">[here].</a>
+								</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<p>I am happy to answer any questions or comments you may have. I don't use social media, so it's best to contact me over email
+									at: <div style="text-align:center"><a href="devinjohnson2026@u.northwestern.edu">[devinjohnson2026@u.northwestern.edu]</a></div><br><br>Alternatively, you can send me physical
+									mail, just address it to the Northwestern Linguistics Department and write my name. I'll try my best to answer emails within
+									48 hours (excluding weekends).</M-F></p>
 							</article>
 
 						<!-- Elements -->
