--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Devin Johnson</h1>
-								<h1>張旭堯</h1>
-								<p>Linguist, ESL Instructor <br> Northwestern University <br> Chicago, IL, USA</p>
+								<h1>Devin Johnson</h1><br>
+								<h1>張旭堯</h1><br>
+								<p>Linguist and ESL Instructor</p>
+								<p>Northwestern University</p>
+								<p>Chicago, Illinois</p>
 							</div>
 						</div>
 						<nav>
