--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 								<p>I'm a Ph.D. student working in the Syntax, Semantics, and Sentence Processing Lab with Masaya Yoshida at Northwestern
 									University. My interests are spread across formal syntax, psycholinguistics, sentence processing, acquisition, and 
 									east asian languages, particularly Mandarin, Japanese, Korean. In addition, I am also a certified ESL/EFL instructor both
-									privately and at Northwestern English Language Programs. Besides my work, I really love learning languages,
-									playing and curating music, cooking, and hiking. If you want to share some music (I always love to),
-									you can follow what I'm listening to <a href="https://www.last.fm/user/devinj1121">[here].</a>
+									privately and at Northwestern English Language Programs. Besides my work with languages, my other love is music. I love both playing
+									(drums are my favorite) and curating. So if you want talk music, I'm always interested.
 								</p>
 							</article>
 
