--- a/cv/index.html
+++ b/cv/index.html
@@ -14,10 +14,10 @@
 <body>
 
 <h1 id="devin-johnson-張旭堯">Devin Johnson (張旭堯)</h1>
-<p>Linguist, ESL Instructor</p>
+<p>Linguist, ESL/EFL Instructor</p>
 <div id="webaddress">
 <p><a href="mailto:devinjohnson@u.northwestern.edu">devinjohnson2026@u.northwestern.edu</a>
-| <a href="dj1121.github.io">dj1121.github.io</a></p>
+| <a href="https://dj1121.github.io/">dj1121.github.io</a></p>
 </div>
 <h2 id="education">Education</h2>
 <p><code>2021-Present</code> <strong>Ph.D., Linguistics, Northwestern
@@ -38,25 +38,30 @@ Science, University of Wisconsin-Madison</strong><br />
 Phi Beta Kappa Honor Society<br />
 Graduation w/ Distinction</p>
 <h2 id="employment">Employment</h2>
-<h4 id="northwestern-university">Northwestern University</h4>
+<h4 id="northwestern-university">Northwestern University<br />
+</h4>
 <p>Instructor, Northwestern English Language Programs (ELP)<br />
 Ph.D. Researcher, Northwestern Linguistics
 <code>2022 - Present</code></p>
 <h4 id="university-of-wisconsin-madison">University of
-Wisconsin-Madison</h4>
+Wisconsin-Madison<br />
+</h4>
 <p>Researcher (Russian, Natural Language Processing), University of
 Wisconsin Law School <code>2017 - 2019</code></p>
-<h4 id="rwth-aachen">RWTH-Aachen</h4>
+<h4 id="rwth-aachen">RWTH-Aachen<br />
+</h4>
 <p>Research Intern (Natural Language Processing), RWTH-Aachen
 Cybernetics Lab <code>2018</code></p>
-<h2 id="awards">Awards</h2>
+<h2 id="awards">Awards<br />
+</h2>
 <p><code>2021</code> <strong>Northwestern Data Science
 Fellow</strong></p>
 <p><code>2018</code> <strong>Phi Beta Kappa</strong></p>
 <p><code>2017</code> <strong>WISCIENCE Summer Research Scholarship,
 UW-Madison</strong></p>
 <h2 id="research-and-writing">Research and Writing</h2>
-<h3 id="conference-proceedings">Conference Proceedings</h3>
+<h3 id="conference-proceedings">Conference Proceedings<br />
+</h3>
 <p><code>2021</code> <span class="citation"
 data-cites="Koltai2021">Kolina Koltai, Iva Grohmann, Devin Johnson, and
 Ella Foley <span>“MASK NARRATIVES PROMOTED BY ANTI-VACCINATION ACCOUNTS
@@ -83,26 +88,29 @@ href="https://www.proquest.com/openview/35081570810e0eee8eb253c0bff26967/1?pq-or
 role="doc-biblioref">https://www.proquest.com/openview/35081570810e0eee8eb253c0bff26967/1?pq-origsite=gscholar&amp;cbl=18750&amp;diss=y</a>.</span></p>
 <h2 id="talks">Talks</h2>
 <h2 id="teaching">Teaching</h2>
-<h3 id="northwestern-university-1">Northwestern University</h3>
+<h3 id="northwestern-university-1">Northwestern University<br />
+</h3>
 <p>LING 480-0 American Academic Culture for Non-Native speakers of
 English (Summer ’22)</p>
-<h3 id="other">Other</h3>
-<p>Private ESL tutoring for undergraduate-graduate level English</p>
+<h3 id="other">Other<br />
+</h3>
+<p>Private ESL/EFL tutoring for undergraduate-graduate level English</p>
 <h2 id="skills">Skills</h2>
 <h3 id="languages">Languages</h3>
-<h4 id="fluent">Fluent</h4>
+<h4 id="currently-fluent">Currently Fluent<br />
+</h4>
 <p>English, Mandarin Chinese</p>
-<h4 id="actively-studying">Actively Studying</h4>
-<p>Japanese, Korean, Spanish</p>
-<h4 id="previously-learned">Previously Learned</h4>
+<h4 id="actively-studying">Actively Studying<br />
+</h4>
+<p>Japanese, Korean</p>
+<h4 id="previously-learned">Previously Learned<br />
+</h4>
 <p>German (C1-C2 as of 2020)<br />
 Russian (C1 as of 2018)<br />
 Italian (Heritage)<br />
 Spanish (High School)</p>
-<h4 id="other-1">Other</h4>
-<p>For non-listed languages, it is possible I may know songs, random
-smatterings, or grammatical facts</p>
-<h3 id="certifications">Certifications</h3>
+<h3 id="certifications">Certifications<br />
+</h3>
 <p><code>2022</code> <strong>Teaching English as a Foreign Language,
 International TEFL Academy</strong><br />
 Training Qualifications UK (TQUK), Level 5 (RQF)<br />
