--- a/cv/index.html
+++ b/cv/index.html
@@ -97,12 +97,12 @@ English (Summer ’22)</p>
 <p>Private ESL/EFL tutoring for undergraduate-graduate level English</p>
 <h2 id="skills">Skills</h2>
 <h3 id="languages">Languages</h3>
-<h4 id="currently-fluent">Currently Fluent<br />
+<h4 id="fluent">Fluent<br />
 </h4>
 <p>English, Mandarin Chinese</p>
-<h4 id="actively-studying">Actively Studying<br />
+<h4 id="studying">Studying<br />
 </h4>
-<p>Japanese, Korean</p>
+<p>Japanese</p>
 <h4 id="previously-learned">Previously Learned<br />
 </h4>
 <p>German (C1-C2 as of 2020)<br />
