--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 								<br>
 								<p>I'm a Ph.D. student working in the Syntax, Semantics, and Sentence Processing Lab with Masaya Yoshida at Northwestern
 									University. My interests are spread across formal syntax, psycholinguistics, sentence processing, acquisition, and 
-									east asian languages, particularly Mandarin and Japanese. In addition, I am also a certified ESL/EFL instructor both
-									privately and at Northwestern English Language Programs. Besides my work with languages, my other love is music. I love both playing
-									(drums are my favorite) and curating. So if you want talk music, I'm always interested.
+									east asian languages, particularly Mandarin and Japanese. In addition, I am also a certified ESL/EFL instructor, working
+									with students namely at the undergraduate/graduate level. Besides my work with languages, my other love is music. I love both playing
+									and curating, so if you want talk music, I'm always interested.
 								</p>
 							</article>
 
