--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
-								<p>Linguist and ESL/EFL Instructor</p>
+								<p>Linguist, ESL/EFL Instructor</p>
 								<p>Northwestern University</p>
 								<p>Chicago, Illinois</p>
 							</div>
