--- a/cv/index.html
+++ b/cv/index.html
@@ -36,7 +36,8 @@ Brains Minds and Machines Summer Course</p>
 <p><code>2015-2019</code> <strong>B.S., Linguistics and Computer
 Science, University of Wisconsin-Madison</strong><br />
 Phi Beta Kappa Honor Society<br />
-Graduation w/ Distinction</p>
+Graduation w/ Distinction<br />
+Russian Flagship Program, German House</p>
 <h2 id="employment">Employment</h2>
 <h4 id="northwestern-university">Northwestern University<br />
 </h4>
