--- a/cv/index.html
+++ b/cv/index.html
@@ -42,7 +42,6 @@ Russian Flagship Program, German House</p>
 <h4 id="northwestern-university">Northwestern University<br />
 </h4>
 <p>Instructor, Northwestern English Language Programs (ELP)<br />
-Ph.D. Researcher, Northwestern Linguistics
 <code>2021 - Present</code></p>
 <h4 id="university-of-wisconsin-madison">University of
 Wisconsin-Madison<br />
@@ -88,7 +87,7 @@ Washington ProQuest Dissertations Publishing, 2021</em>, 2021, <a
 href="https://www.proquest.com/openview/35081570810e0eee8eb253c0bff26967/1?pq-origsite=gscholar&amp;cbl=18750&amp;diss=y"
 role="doc-biblioref">https://www.proquest.com/openview/35081570810e0eee8eb253c0bff26967/1?pq-origsite=gscholar&amp;cbl=18750&amp;diss=y</a>.</span></p>
 <h2 id="talks">Talks</h2>
-<h2 id="teaching">Teaching</h2>
+<h2 id="courses-taught">Courses Taught</h2>
 <h3 id="northwestern-university-1">Northwestern University<br />
 </h3>
 <p>LING 480-0 American Academic Culture for Non-Native speakers of
