--- a/cv/index.html
+++ b/cv/index.html
@@ -99,16 +99,17 @@ English (Summer ’22)</p>
 <h3 id="languages">Languages</h3>
 <h4 id="fluent">Fluent<br />
 </h4>
-<p>English, Mandarin Chinese</p>
+<p>English<br />
+Mandarin Chinese<br />
+German</p>
+<h4 id="conversational">Conversational<br />
+</h4>
+<p>Italian (Heritage)<br />
+Russian (C1 as of 2018)<br />
+</p>
 <h4 id="studying">Studying<br />
 </h4>
 <p>Japanese</p>
-<h4 id="previously-learned">Previously Learned<br />
-</h4>
-<p>German (C1-C2 as of 2020)<br />
-Russian (C1 as of 2018)<br />
-Italian (Heritage)<br />
-Spanish (High School)</p>
 <h3 id="certifications">Certifications<br />
 </h3>
 <p><code>2022</code> <strong>Teaching English as a Foreign Language,
