--- a/cv/index.html
+++ b/cv/index.html
@@ -97,7 +97,7 @@ English (Summer ’22)</p>
 <p>Private ESL/EFL tutoring for undergraduate-graduate level English</p>
 <h2 id="skills">Skills</h2>
 <h3 id="languages">Languages</h3>
-<h4 id="fluent">Fluent<br />
+<h4 id="professional">Professional<br />
 </h4>
 <p>English<br />
 Mandarin Chinese<br />
