--- a/cv/index.html
+++ b/cv/index.html
@@ -104,8 +104,8 @@ Mandarin Chinese<br />
 German</p>
 <h4 id="conversational">Conversational<br />
 </h4>
-<p>Italian (Heritage)<br />
-Russian (C1 as of 2018)<br />
+<p>Italian<br />
+Russian<br />
 </p>
 <h4 id="studying">Studying<br />
 </h4>
