--- a/cv/index.html
+++ b/cv/index.html
@@ -90,8 +90,14 @@ role="doc-biblioref">https://www.proquest.com/openview/35081570810e0eee8eb253c0b
 <h2 id="courses-taught">Courses Taught</h2>
 <h3 id="northwestern-university-1">Northwestern University<br />
 </h3>
-<p>LING 480-0 American Academic Culture for Non-Native speakers of
+<h4 id="instructor">Instructor<br />
+</h4>
+<p>LING 480: American Academic Culture for Non-Native speakers of
 English (Summer ’22)</p>
+<h4 id="teaching-assistant">Teaching Assistant</h4>
+<p>LING 342: Structure of Various Languages - Japanese (Fall ’22)<br />
+TGS 509: Foundations of American English and Academic Culture (Summer
+’22)</p>
 <h3 id="other">Other<br />
 </h3>
 <p>Private ESL/EFL tutoring for undergraduate-graduate level English</p>
@@ -101,12 +107,12 @@ English (Summer ’22)</p>
 </h4>
 <p>English<br />
 Mandarin Chinese<br />
-German</p>
+</p>
 <h4 id="conversational">Conversational<br />
 </h4>
 <p>Italian<br />
 Russian<br />
-</p>
+German</p>
 <h4 id="studying">Studying<br />
 </h4>
 <p>Japanese</p>
