--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
-								<p>I'm a Ph.D. student working in the Syntax, Semantics, and Sentence Processing Lab with Masaya Yoshida at Northwestern
+								<p>I'm a Ph.D. student in linguistics working in the Syntax, Semantics, and Sentence Processing Lab with Masaya Yoshida at Northwestern
 									University. My interests are spread across formal syntax, psycholinguistics, sentence processing, acquisition, and 
 									east asian languages, particularly Mandarin and Japanese. In addition, I am also a certified ESL/EFL instructor, working
 									with students namely at the undergraduate/graduate level. Besides my work with languages, my other love is music. I love both playing
