--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
-								<p>I'm a Ph.D. student in linguistics working in the Syntax, Semantics, and Sentence Processing Lab with Masaya Yoshida at Northwestern
-									University. My interests are spread across formal syntax, psycholinguistics, sentence processing, acquisition, and 
-									east asian languages, particularly Mandarin and Japanese. In addition, I am also a certified ESL/EFL instructor, working
-									with students namely at the undergraduate/graduate level. Besides my work with languages, my other love is music. I love both playing
-									and curating, so if you want talk music, I'm always interested.
+								<p>
+									I'm a PhD student in linguistics working across areas such as formal syntax, sentence processing, acquisition, and east asian languages. From time to time,
+I also enjoy thinking about semantic and pragmatic questions. Besides my research, I am also an ESL and writing instructor, mostly working with students between late high school - university graduate levels.
+Lastly, apart from language(s), my other love is music and I often both play and curate a wide range of genres.
 								</p>
 							</article>
 
