--- a/cv/index.html
+++ b/cv/index.html
@@ -101,6 +101,12 @@ TGS 509: Foundations of American English and Academic Culture (Summer
 <h3 id="other">Other<br />
 </h3>
 <p>Private ESL/EFL tutoring for undergraduate-graduate level English</p>
+<h3 id="university-of-washington">University of Washington<br />
+</h3>
+<h4 id="teaching-assistant-1">Teaching Assistant</h4>
+<p>LING 570: Shallow Processing Techniques For Natural Language
+Processing (Fall ’20)<br />
+CLMS Placement Test (Grading)</p>
 <h2 id="skills">Skills</h2>
 <h3 id="languages">Languages</h3>
 <h4 id="professional">Professional<br />
