--- a/cv/index.html
+++ b/cv/index.html
@@ -109,19 +109,16 @@ CLMS Placement Test (Grading)</p>
 <p>Private ESL/EFL tutoring for undergraduate-graduate level English</p>
 <h2 id="skills">Skills</h2>
 <h3 id="languages">Languages</h3>
-<h4 id="professional">Professional<br />
+<h4 id="main">Main<br />
 </h4>
 <p>English<br />
 Mandarin Chinese<br />
-</p>
-<h4 id="conversational">Conversational<br />
+Japanese</p>
+<h4 id="side">Side<br />
 </h4>
 <p>Italian<br />
 Russian<br />
 German</p>
-<h4 id="studying">Studying<br />
-</h4>
-<p>Japanese</p>
 <h3 id="certifications">Certifications<br />
 </h3>
 <p><code>2022</code> <strong>Teaching English as a Foreign Language,
