--- a/tgs509.html
+++ b/tgs509.html
@@ -102,7 +102,8 @@
 <div class="content" tabindex="-1">
     <h1>TGS-509: ELP Foundations</h1>
     <h2>Summer 2022 Student Directory</h2>
-    <p>Below is a directory of your fellow classmates based on the Canvas discussion board you posted to. We hope this can help you learn more about them and make friends!</p><article class="people-medium">
+    <p>Below is a directory of your fellow classmates based on the Canvas discussion board you posted to. We hope this can help you learn more about them and make friends!<br>
+	   <a href="assets_elp/directory_2022.pdf">View as PDF</a></p><article class="people-medium">
 <div class="people-wrap">	<div class="people-image"
 >	<img src="assets_elp/canvas_pages/canvas_3_files/IMG_20220311_203028_769-1.png" alt="Benjamin" />
 </div>
@@ -736,7 +737,7 @@ I am looking forward to the reputable education system that Northwestern has to 
 Country of Origin: China
 Profile: My research interests focus on contact/interfacial mechanics, energy conservation and sustainability. I am a big sports fan, love watching basketball and soccer games. I usually play basketball or hang out with my friends in my spare time. One thing that I am really looking forward to about living in Chicago area is to watch BULLS play NBA games in person. It is very excited to explore unknowns with many distinguished people at Northwestern. I believe I will have a great time in my life, even though I am a little nervous about my ability to adapt to a whole new environment.
             </p></article>
- 
+
 <article class="people-medium">
 <div class="people-wrap">	<div class="people-image"
 >	<img src="assets_elp/canvas_pages/canvas_3_files/Life Photo.jpg" alt="Zhanpeng" />
