--- a/tgs509.html
+++ b/tgs509.html
@@ -729,7 +729,7 @@ I am looking forward to the reputable education system that Northwestern has to 
 
 <article class="people-medium">
 <div class="people-wrap"><div class="people-image"
->	<img src="images/gallery/2.jpg" alt="" />
+>	<img src="assets_elp/canvas_pages/canvas_1_files/xiaomanWANGphoto.jpg" alt="Xiaoman" />
 </div>
 <div class="people-content">
 	<h2><a id="Xiaoman Wang">Xiaoman Wang</a></h2>
