--- a/tgs509.html
+++ b/tgs509.html
@@ -39,7 +39,7 @@
 <li><a href="#Yi-ping Chen" class="active"> Yi-ping Chen</a></li>
 <li><a href="#Chang-ti Chou" class="active"> Chang-ti Chou</a></li>
 <li><a href="#Chi-ya Chou" class="active"> Chi-ya Chou</a></li>
-<li><a href="#Catalina Farias" class="active"> Catalina Farias</a></li>
+<li><a href="#Catalina Farías" class="active"> Catalina Farías</a></li>
 <li><a href="#Rui Feng" class="active"> Rui Feng</a></li>
 <li><a href="#Haiqing Gao" class="active"> Haiqing Gao</a></li>
 <li><a href="#Marie Fatima Gaw" class="active"> Marie Fatima Gaw</a></li>
@@ -126,7 +126,7 @@ Instagram: @plenyo
 
 <article class="people-medium">
 <div class="people-wrap"><div class="people-image"
->	<img src="images/gallery/2.jpg" alt="" />
+>	<img src="assets_elp/canvas_pages/2.jpg" alt="" />
 </div>
 <div class="people-content">
 	<h2><a id="Ana Barioni">Ana Barioni</a></h2>
@@ -184,7 +184,7 @@ I'm looking forward to having a walk/run along Lake Michigan and learning more a
 
 <article class="people-medium">
 <div class="people-wrap">	<div class="people-image"
->	<img src="assets_elp/canvas_pages/canvas_2_files/IMG_0506-1.jpg" alt="Catalina" />
+>	<img src="assets_elp/canvas_pages/2.jpg" alt="Catalina" />
 </div>
 <div class="people-content">
 	<h2><a id="Catalina Farias">Catalina Farias</a></h2>
@@ -217,7 +217,7 @@ There are two things that I am most excited about living in Evanston: snow and m
 
 <article class="people-medium">
 <div class="people-wrap"><div class="people-image"
->	<img src="images/gallery/2.jpg" alt="" />
+>	<img src="assets_elp/canvas_pages/2.jpg" alt="" />
 </div>
 <div class="people-content">
 	<h2><a id="Marie Fatima Gaw">Marie Fatima Gaw</a></h2>
