--- a/tgs509.html
+++ b/tgs509.html
@@ -121,8 +121,20 @@
 </div></div><p>Hello everyone!
 My name is Plenyo, and I am from Natal, a beautiful beach city in Brazil. I am a Ph.D. student in the Civil and Environmental Engineering department, specializing in Geotechnical Engineering.My research interests lie in working out new methods to improve the sustainability of urban systems. Northwestern seemed like a great place to be a Ph.D. student because of the excellent facilities combined with its proximity to a major city. I look forward to visiting restaurants and experiencing the Chicago's culture. I am really excited to enjoy the range of opportunities I'll have at Northwestern and in the Chicagoland area.
 Instagram: @plenyo
-
  </p></article>
+
+
+<article class="people-medium">
+	<div class="people-wrap">	<div class="people-image"
+	>	<img src="assets_elp/canvas_pages/canvas_1_files/20220528_104233-02.jpg" alt="Sikder" />
+	</div>
+	<div class="people-content">
+		<h2><a id="Sikder Ashikuzzaman Ayon">Sikder Ashikuzzaman Ayon</a></h2>
+	</div></div><p>Hello everyone!
+		I, Sikder Ashikuzzaman Ayon, am going to start my Ph.D. journey in the department of Materials Science and Engineering at Northwestern University. I was born and raised in Dhaka, the capital of Bangladesh, a South-Asian developing country. I have completed my undergraduate and Master’s from Bangladesh University of Engineering and Technology. I am keen to work with either optoelectronics materials or energy materials. I enjoy traveling, meeting new individuals, and forming bonds with them. I also like going out to eat and socializing with my friends. I'm looking forward to moving to Chicago/Evanston because it will allow me to explore world-famous attractions such as the Art Institute of Chicago, Millennium Park, Sky deck Chicago, etc. Moreover, I will have the chance to explore the everlasting beauty of Lake Michigan. Chicago's transportation system will allow me to move without difficulty, and the abundance of facilities of an urban city like Chicago will allow me to get going easily. I am excited to meet and work alongside the world-renowned experts in the field of materials at Northwestern University. It will provide me the opportunity to learn new things and broaden my horizon. In addition, I want to experience the eternal beauty of the campus and make new friends for lifetime. I'm a little nervous about relocating to a new place and immersing myself in a new culture. Life is expected to change a lot. However, I am ready to explore this uncertain ride and enjoy every moment of it.
+	 </p></article>
+	
+
 
 <article class="people-medium">
 <div class="people-wrap"><div class="people-image"
