--- a/tgs509.html
+++ b/tgs509.html
@@ -126,7 +126,7 @@ Instagram: @plenyo
 
 <article class="people-medium">
 	<div class="people-wrap">	<div class="people-image"
-	>	<img src="assets_elp/canvas_pages/canvas_1_files/20220528_104233-02.jpg" alt="Sikder" />
+	>	<img src="assets_elp/canvas_pages/canvas_1_files/20220528_104233-02.jpeg" alt="Sikder" />
 	</div>
 	<div class="people-content">
 		<h2><a id="Sikder Ashikuzzaman Ayon">Sikder Ashikuzzaman Ayon</a></h2>
