--- a/tgs509.html
+++ b/tgs509.html
@@ -34,6 +34,7 @@
                 <div class="section-name"><a href="#">Jump to Student</a></div>
                 <ul><li><a href="#Benjamin Amartey" class="active"> Benjamin Amartey</a></li>
 <li><a href="#Plenyo Nahen Gonzaga Araujo" class="active"> Plenyo Nahen Gonzaga Araujo</a></li>
+<li><a href="#Sikder Ashikuzzaman Ayon" class="active"> Sikder Ashikuzzaman Ayon</a></li>
 <li><a href="#Ana Barioni" class="active"> Ana Barioni</a></li>
 <li><a href="#Tapiwanashe Bhibho" class="active"> Tapiwanashe Bhibho</a></li>
 <li><a href="#Yi-ping Chen" class="active"> Yi-ping Chen</a></li>
