--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<p>
 									I'm a PhD student in linguistics working across areas such as formal syntax, sentence processing, acquisition, and East Asian languages. From time to time,
 I also enjoy thinking about semantic and pragmatic questions. Besides my research, I am also an ESL/EFL instructor, mostly working with students between late high school - university graduate levels.
-Lastly, apart from language(s), my other love is music and I often both play and curate a wide range of genres.
+Apart from language(s), my other loves are music and cooking.
 								</p>
 							</article>
 
