--- a/tgs509.html
+++ b/tgs509.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/print.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="assets_elp/css/styles.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="assets_elp/css/print.css" type="text/css" media="print" />
     <title>ELP Foundations Students</title>
 </head> 
 
@@ -952,7 +952,7 @@ I am interested in learning new statistical methods and playing with data. I lik
 </main>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="assets_elp/js/scripts.js"></script>
 
 </body>
 </html>
