--- a/assets_elp/html_templates/html_bottom.html
+++ b/assets_elp/html_templates/html_bottom.html
@@ -4,7 +4,7 @@
 </main>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="assets_elp/js/scripts.js"></script>
 
 </body>
 </html>
