--- a/assets_elp/html_templates/html_top.html
+++ b/assets_elp/html_templates/html_top.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/print.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="assets_elp/css/styles.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="assets_elp/css/print.css" type="text/css" media="print" />
     <title>ELP Foundations Students</title>
 </head> 
 
