--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a PhD student in linguistics working across areas such as formal syntax, sentence processing, acquisition, and East Asian languages. From time to time,
-I also enjoy thinking about semantic and pragmatic questions. Besides my research, I am also an ESL/EFL instructor, mostly working with students between late high school - university graduate levels.
-Apart from language(s), my other loves are music and cooking.
+									I'm a PhD student in linguistics with interests in formal syntax, sentence processing, acquisition, Chinese, and Japanese. My background is in computer science, linguistics, and various languages. Besides my research, I am also an ESL/EFL instructor, mostly working with graduate students. Outside of work, I love engaging with music and
+									playing PC games. Lately, I've also been dabbling in translation, making art with P5.js, and learning some more Polish.
 								</p>
 							</article>
 
