--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
-								<p>Linguist, ESL/EFL Instructor</p>
-								<p>Northwestern University</p>
+								<p>Linguist, ESL Instructor</p>
 								<p>Chicago, Illinois</p>
 							</div>
 						</div>
@@ -44,8 +43,8 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a PhD student in linguistics with interests in formal syntax, sentence processing, acquisition, Chinese, and Japanese. My background is in computer science, linguistics, and various languages. Besides my research, I am also an ESL/EFL instructor, mostly working with graduate students. Outside of work, I love engaging with music, cooking, and
-									playing PC games. Lately, I've also been dabbling in translation, making art with P5.js, and learning some more Polish.
+									I'm a PhD student in linguistics with interests in formal syntax, sentence processing, acquisition, Chinese, and Japanese. My background is in computer science, linguistics, and various languages. Besides my research, I am also an ESL (English as a Second Language) instructor, mostly working with graduate students in Chicago.
+									Outside of work, I love engaging with music (esp. jazz, flamenco, funk), cooking, and playing PC games. Lately, I've also been dabbling in translation, making art with p5.js, and learning some more Polish.
 								</p>
 							</article>
 
