--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
 								<p>Linguist, ESL Instructor</p>
-								<p>Chicago, Illinois</p>
+								<p>Chicago, USA</p>
 							</div>
 						</div>
 						<nav>
