--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<br>
 								<p>
 									I'm a PhD student in linguistics at Northwestern University with interests in formal syntax, sentence processing, acquisition, Chinese, and Japanese. My background is in computer science, linguistics, and various languages. Besides my research, I'm also an ESL (English as a Second Language) instructor, mostly working with graduate students in Chicago.
-									Outside of work, I love engaging with music (esp. jazz, flamenco, funk), cooking, and playing PC games. Lately, I've also been dabbling in translation, making art with p5.js, and learning some more Polish.
+									Outside of work, I love engaging with music (esp. jazz, flamenco, funk), cooking, and playing PC games.
 								</p>
 							</article>
 
