--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <h1 id="devin-johnson-張旭堯">Devin Johnson (張旭堯)</h1>
-<p>Linguist, ESL/EFL Instructor</p>
+<p>Linguist, ESL Instructor</p>
 <div id="webaddress">
 <p><a href="mailto:devinjohnson@u.northwestern.edu">devinjohnson2026@u.northwestern.edu</a>
 | <a href="https://dj1121.github.io/">dj1121.github.io</a></p>
@@ -87,7 +87,7 @@ Washington ProQuest Dissertations Publishing, 2021</em>, 2021, <a
 href="https://www.proquest.com/openview/35081570810e0eee8eb253c0bff26967/1?pq-origsite=gscholar&amp;cbl=18750&amp;diss=y"
 role="doc-biblioref">https://www.proquest.com/openview/35081570810e0eee8eb253c0bff26967/1?pq-origsite=gscholar&amp;cbl=18750&amp;diss=y</a>.</span></p>
 <h2 id="talks">Talks</h2>
-<h2 id="courses-taught">Courses Taught</h2>
+<h2 id="teaching">Teaching</h2>
 <h3 id="northwestern-university-1">Northwestern University<br />
 </h3>
 <h4 id="instructor">Instructor<br />
@@ -104,21 +104,16 @@ TGS 509: Foundations of American English and Academic Culture (Summer
 <p>LING 570: Shallow Processing Techniques For Natural Language
 Processing (Fall ’20)<br />
 CLMS Placement Test (Grading)</p>
-<h3 id="other">Other<br />
-</h3>
-<p>Private ESL/EFL tutoring for undergraduate-graduate level English</p>
+<h2 id="volunteering">Volunteering</h2>
+<h4 id="south-east-asia-center-chicago">South-East Asia Center
+Chicago<br />
+</h4>
+<p>Volunteer Tutor <code>2022 - Present</code></p>
 <h2 id="skills">Skills</h2>
 <h3 id="languages">Languages</h3>
-<h4 id="main">Main<br />
-</h4>
 <p>English<br />
 Mandarin Chinese<br />
 Japanese</p>
-<h4 id="side">Side<br />
-</h4>
-<p>Italian<br />
-Russian<br />
-German</p>
 <h3 id="certifications">Certifications<br />
 </h3>
 <p><code>2022</code> <strong>Teaching English as a Foreign Language,
