--- a/cv/index.html
+++ b/cv/index.html
@@ -113,7 +113,8 @@ Chicago<br />
 <h3 id="languages">Languages</h3>
 <p>English<br />
 Mandarin Chinese<br />
-Japanese</p>
+Japanese<br />
+German</p>
 <h3 id="certifications">Certifications<br />
 </h3>
 <p><code>2022</code> <strong>Teaching English as a Foreign Language,
