--- a/cv/index.html
+++ b/cv/index.html
@@ -114,7 +114,8 @@ Chicago<br />
 <p>English<br />
 Mandarin Chinese<br />
 Japanese<br />
-German</p>
+German<br />
+Italian</p>
 <h3 id="certifications">Certifications<br />
 </h3>
 <p><code>2022</code> <strong>Teaching English as a Foreign Language,
