--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <h1 id="devin-johnson-張旭堯">Devin Johnson (張旭堯)</h1>
-<p>Linguist, ESL Instructor</p>
+<p>Linguist</p>
 <div id="webaddress">
 <p><a href="mailto:devinjohnson@u.northwestern.edu">devinjohnson2026@u.northwestern.edu</a>
 | <a href="https://dj1121.github.io/">dj1121.github.io</a></p>
@@ -105,17 +105,15 @@ TGS 509: Foundations of American English and Academic Culture (Summer
 Processing (Fall ’20)<br />
 CLMS Placement Test (Grading)</p>
 <h2 id="volunteering">Volunteering</h2>
-<h4 id="south-east-asia-center-chicago">South-East Asia Center
-Chicago<br />
+<h4 id="vegan-linguists">Vegan Linguists<br />
 </h4>
-<p>Volunteer Tutor <code>2022 - Present</code></p>
+<p>Translator (Chinese -&gt; English) <code>2022 - Present</code></p>
 <h2 id="skills">Skills</h2>
-<h3 id="languages">Languages</h3>
+<h3 id="current-working-anguages">(Current Working) anguages</h3>
 <p>English<br />
 Mandarin Chinese<br />
 Japanese<br />
-German<br />
-Italian</p>
+Swedish</p>
 <h3 id="certifications">Certifications<br />
 </h3>
 <p><code>2022</code> <strong>Teaching English as a Foreign Language,
