--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
-								<p>Linguist, ESL Instructor</p>
+								<p>Linguist</p>
 								<p>Chicago, USA</p>
 							</div>
 						</div>
@@ -43,8 +43,8 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University with interests in formal syntax, sentence processing, acquisition, Chinese, and Japanese. My background is in computer science, linguistics, and various languages. Besides my research, I'm also an ESL (English as a Second Language) instructor, mostly working with graduate students in Chicago.
-									Outside of work, I love engaging with music (esp. jazz, flamenco, funk), cooking, and playing PC games.
+									I'm a PhD student in linguistics at Northwestern University with interests in formal syntax/syntactic theory, Japanese, and Chinese. My background is in computer science, linguistics, and various languages. Besides my research, I'm also an ESL (English as a Second Language) instructor, mostly working with graduate students in Chicago.
+									Outside of work, I love engaging with music (especially jazz, flamenco, funk), cooking, and playing PC games.
 								</p>
 							</article>
 
