--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University with interests in formal syntax/syntactic theory, Japanese, and Chinese. My background is in computer science, linguistics, and various languages. Besides my research, I'm also an ESL (English as a Second Language) instructor, mostly working with graduate students in Chicago.
+									I'm a PhD student in linguistics at Northwestern University with research interests in formal syntax/syntactic theory, Swedish, Japanese, and Chinese. My background is in computer science, linguistics, and various languages. Besides my research, I'm also an ESL (English as a Second Language) instructor, mostly working with graduate students in Chicago.
 									Outside of work, I love engaging with music (especially jazz, flamenco, funk), cooking, and playing PC games.
 								</p>
 							</article>
