--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									I'm a PhD student in linguistics at Northwestern University with research interests in formal syntax/syntactic theory, Swedish, Japanese, and Chinese. 
 									My background is in computer science, linguistics, and various languages. 
 									Besides my research, I write translations in several languages, and I'm also an ESL (English as a Second Language) instructor working with graduate students in Chicago.
-									Outside of work, I love engaging with music (especially jazz, flamenco, funk), cooking, and playing PC games.
+									Outside of work, I love engaging with music (especially jazz, flamenco, funk), mathematics, generative art, cooking, and PC games.
 								</p>
 							</article>
 
