--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<p>
 									I'm a PhD student in linguistics at Northwestern University with research interests in formal syntax/syntactic theory, Swedish, Japanese, and Chinese. 
 									My background is in computer science, linguistics, and various languages. 
-									Besides my research, I write translations in several languages, and I'm also an ESL (English as a Second Language) instructor working with graduate students in Chicago.
+									Besides my research, I write translations in several languages, and I'm also an ESL instructor working mostly with graduate students at the Northwestern English Language Programs.
 									Outside of work, I love engaging with music (especially jazz, flamenco, funk), mathematics, generative art, cooking, and PC games.
 								</p>
 							</article>
