--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <h1 id="devin-johnson-張旭堯">Devin Johnson (張旭堯)</h1>
-<p>Linguist, ESL Instructor</p>
+<p>Linguist</p>
 <div id="webaddress">
 <p><a href="mailto:devinjohnson@u.northwestern.edu">devinjohnson2026@u.northwestern.edu</a>
 | <a href="https://dj1121.github.io/">dj1121.github.io</a></p>
@@ -22,8 +22,7 @@
 <h2 id="education">Education</h2>
 <p><code>2021-Present</code> <strong>Ph.D., Linguistics, Northwestern
 University</strong><br />
-Research: Syntax, Psycholinguistics, Acquisition, East Asian
-Languages<br />
+Research: Syntactic Theory, Psycholinguistics, Formal Syntax<br />
 Advisor: Masaya Yoshida</p>
 <p><code>2019-2021</code> <strong>M.S., Computational Linguistics,
 University of Washington</strong><br />
@@ -105,10 +104,11 @@ TGS 509: Foundations of American English and Academic Culture (Summer
 Processing (Fall ’20)<br />
 CLMS Placement Test (Grading)</p>
 <h2 id="volunteering">Volunteering</h2>
-<h4 id="vegan">Vegan Linguists</h4>
-<p>Translator (Chinese-English) <code>2022 - Present</code></p>
+<h4 id="vegan-linguists">Vegan Linguists<br />
+</h4>
+<p>Translator (Chinese -&gt; English) <code>2022 - Present</code></p>
 <h2 id="skills">Skills</h2>
-<h3 id="languages">(Current Focus) Languages</h3>
+<h3 id="current-working-languages">(Current Working) Languages</h3>
 <p>English<br />
 Mandarin Chinese<br />
 Japanese<br />
