--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University with research interests in formal syntax/syntactic theory, Swedish, Japanese, and Chinese. 
-									My background is in computer science, linguistics, and various languages. 
-									Besides my research, I write translations in several languages, and I'm also an ESL instructor working mostly with graduate students at the Northwestern English Language Programs.
-									Outside of work, I love engaging with music (especially jazz, flamenco, funk), mathematics, generative art, cooking, and PC games.
+									I'm a PhD student in linguistics at Northwestern University with research interests in formal syntax/syntactic theory and psycholinguistics. 
+									My background is in computer science, linguistics, and various languages. Besides my research, I write translations in several languages, and I'm also an ESL instructor working mostly with graduate students at the Northwestern English Language Programs.
+									Outside of work, I love engaging with music (especially jazz, flamenco, funk), mathematics, generative art, cooking, and PC games. I currently spend most of my time speaking/working with
+									English, Japanese, Swedish, and Mandarin Chinese.
 								</p>
 							</article>
 
