--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<p>
 									I'm a PhD student in linguistics at Northwestern University with research interests in formal syntax/syntactic theory and psycholinguistics. 
 									My background is in computer science, linguistics, and various languages. Besides my research, I write translations in several languages, and I'm also an ESL instructor working mostly with graduate students at the Northwestern English Language Programs.
-									Outside of work, I love engaging with music (especially jazz, flamenco, funk), mathematics, generative art, cooking, and PC games. I currently spend most of my time speaking/working with
+									Outside of work, I love engaging with music (especially jazz, flamenco, funk), mathematics, cooking, and PC games. I currently spend most of my time speaking/working with
 									English, Japanese, Swedish, and Mandarin Chinese.
 								</p>
 							</article>
