--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University with research interests in formal syntax/syntactic theory and psycholinguistics. 
-									My background is in computer science, linguistics, and various languages. Besides my research, I write translations in several languages, and I'm also an ESL instructor working mostly with graduate students at the Northwestern English Language Programs.
-									Outside of work, I love engaging with music (especially jazz, flamenco, funk), mathematics, cooking, and PC games. I currently spend most of my time speaking/working with
-									English, Japanese, Swedish, and Mandarin Chinese.
+									I'm a PhD student in linguistics at Northwestern University with research interests in both syntactic theory and computational psycholinguistics. 
+									My background is in computer science, linguistics, and various languages. Besides my research, I serve as a teaching  assistant for undergraduate
+									linguisics courses, and I'm also an ESL instructor teaching graduate courses at the Northwestern English Language Programs.
+									Outside of work, I love engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games.
 								</p>
 							</article>
 
