--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a PhD student in linguistics at Northwestern University with research interests in both syntactic theory and computational psycholinguistics. 
-									My background is in computer science, linguistics, and various languages. Besides my research, I serve as a teaching  assistant for undergraduate
-									linguisics courses, and I'm also an ESL instructor teaching graduate courses at the Northwestern English Language Programs.
-									Outside of work, I love engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games.
+									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic theory and computational psycholinguistics. 
+									My background is in computer science, linguistics, and various languages. I received my BS in computer sciences and linguistics from University of
+									Wisconsin - Madison and my MS in computational linguistics from University of Washington - Seattle. Besides my research, I serve as a teaching assistant for undergraduate
+									linguisics courses, and I'm also an ESL instructor teaching graduate courses at the Northwestern English Language Programs. Outside of work, I 
+									love engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games.
 								</p>
 							</article>
 
