--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="./cv/index.html">CV</a></li>
+								<li><a href="https://scholar.google.com/citations?user=JTeQM9AAAAAJ&hl=en">Publications</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -47,7 +47,7 @@
 									My background is in computer science, linguistics, and various languages. I received my BS in computer sciences and linguistics from University of
 									Wisconsin - Madison and my MS in computational linguistics from University of Washington - Seattle. Besides my research, I serve as a teaching assistant for undergraduate
 									linguisics courses, and I'm also an ESL instructor teaching graduate courses at the Northwestern English Language Programs. Outside of work, I 
-									love engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games.
+									love interacting in the languages I study, as well as engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games.
 								</p>
 							</article>
 
