--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 								<p>
 									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic theory and computational psycholinguistics. 
 									My background is in computer science, linguistics, and various languages. I received my BS in computer sciences and linguistics from University of
-									Wisconsin - Madison and my MS in computational linguistics from University of Washington - Seattle. Besides my research, I serve as a teaching assistant for undergraduate
+									Wisconsin - Madison (2019) and my MS in computational linguistics from University of Washington - Seattle (2021). Besides my research, I serve as a teaching assistant for undergraduate
 									linguisics courses, and I'm also an ESL instructor teaching graduate courses at the Northwestern English Language Programs. Outside of work, I 
-									love interacting in the languages I study, as well as engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games.
+									love interacting in the languages I study, as well as engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games. For the past few years,
+									I've been most captured by East Asian languages, particularly Mandarin, Japanese, and Korean.
 								</p>
 							</article>
 
