--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
-								<p>Theoretical Linguist ・ Educator</p>
+								<p>Theoretical Linguist<br> Educator</p>
 								<p>Chicago, USA</p>
 							</div>
 						</div>
@@ -47,7 +47,9 @@
 									My background is in computer science, linguistics, and various languages. I received my BS in computer sciences and linguistics from University of
 									Wisconsin - Madison (2019) and my MS in computational linguistics from University of Washington - Seattle (2021). Besides my research, I 
 									serve as a teaching assistant for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
-									Northwestern English Language Programs. Outside of work, I love interacting in the languages I study, as well as engaging with music
+									Northwestern English Language Programs.<br><br>
+									
+									Outside of work, I love interacting in the languages I study, as well as engaging with music
 									(eg., jazz, flamenco, etc.), mathematics, cooking, and PC games. For the past few years, I've been most captured by East Asian languages,
 									particularly Mandarin, Japanese, and Korean.
 								</p>
