--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 									serve as a teaching assistant for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
 									Northwestern English Language Programs.<br><br>
 									
-									Outside of work, I love interacting in the languages I study, as well as engaging with music
-									(eg., jazz, flamenco, etc.), mathematics, cooking, and PC games. For the past few years, I've been most captured by East Asian languages,
-									particularly Mandarin, Japanese, and Korean.
+									Outside of work, I love interacting in the languages I study. For the past few years, I've been most captured by East Asian languages,
+									particularly Mandarin, Japanese, and Korean. However, in the past, I've had much experience with German, Italian, Russian, and Swedish.
+									Last but not least, I really enjoy engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games. 
 								</p>
 							</article>
 
