--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
-								<p>Theoretical Linguist<br> Educator</p>
+								<p>Linguist</p>
 								<p>Chicago, USA</p>
 							</div>
 						</div>
@@ -43,7 +43,7 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic theory and computational psycholinguistics. 
+									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic and computational theory. 
 									My background is in computer science, linguistics, and various languages. I received my BS in computer sciences and linguistics from University of
 									Wisconsin - Madison (2019) and my MS in computational linguistics from University of Washington - Seattle (2021). Besides my research, I serve as a teaching assistant 
 									for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
