--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic and computational theory. 
-									My background is in computer science, linguistics, and various languages. I received my BS in computer sciences and linguistics from University of
-									Wisconsin - Madison (2019) and my MS in computational linguistics from University of Washington - Seattle (2021). Besides my research, I serve as a teaching assistant 
+									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic and computational theory.
+									More specifically, I want to understand the computational properties posited (explicitly or implicitly) in theoretical syntax
+									and whether such properties are sensible for describing the human capacity for language. Besides my research, I serve as a teaching assistant 
 									for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
 									Northwestern English Language Programs.<br><br>
 									
