--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<br>
 								<p>
 									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic and computational theory.
-									More specifically, I want to understand the computational properties posited (explicitly or implicitly) in theoretical syntax
+									Put briefly, I want to understand the computational properties posited (explicitly or implicitly) in theoretical syntax
 									and whether such properties are sensible for describing the human capacity for language. Besides my research, I serve as a teaching assistant 
 									for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
 									Northwestern English Language Programs.<br><br>
