--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 								<br>
 								<p>
 									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic and computational theory.
-									Put briefly, I want to understand the computational properties posited (explicitly or implicitly) in theoretical syntax
-									and whether such properties are sensible for describing the human capacity for language. Besides my research, I serve as a teaching assistant 
-									for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
+									Put briefly, I want to understand the computational properties assumed in theoretical syntax
+									and whether such properties are empirically well-founded for describing the human capacity for language.
+									Besides my research, I serve as a teaching assistant for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
 									Northwestern English Language Programs.<br><br>
 									
 									Outside of work, I love interacting in the languages I study. For the past few years, I've been most captured by East Asian languages,
