--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with interests in both syntactic and computational theory.
-									Put briefly, I want to understand the computational properties assumed in theoretical syntax
-									and whether such properties are empirically well-founded for describing the human capacity for language.
+									I'm a doctoral researcher in linguistics at Northwestern University with interests in formal syntactic theory and psycholinguistics.
 									Besides my research, I serve as a teaching assistant for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
 									Northwestern English Language Programs.<br><br>
 									
