--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with interests in formal syntactic theory and psycholinguistics.
+									I'm a doctoral researcher in linguistics at Northwestern University with interests in formal syntactic theory and (computational) psycholinguistics.
 									Besides my research, I serve as a teaching assistant for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
 									Northwestern English Language Programs.<br><br>
 									
