--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 								<span class="image main"><img src="images/avatar1.jpg" alt="" /></span>
 								<br>
 								<p>
-									I'm a doctoral researcher in linguistics at Northwestern University with interests in syntactic theory and (computational) psycholinguistics.
+									I'm a doctoral researcher in linguistics at Northwestern University with interests in formal (morpho-)syntactic theory and East Asian languages.
 									Besides my research, I serve as a teaching assistant for undergraduate linguisics courses, and I'm also an ESL instructor teaching graduate courses at the 
 									Northwestern English Language Programs.<br><br>
 									
-									Outside of work, I love interacting in the languages I study. For the past few years, I've been most captured by East Asian languages,
-									particularly Mandarin, Japanese, and Korean. However, in the past, I've had much experience with German, Italian, Russian, and Swedish.
+									Outside of work, I love interacting in the languages I study. For the past few years, I've been most captured by
+									Mandarin, Japanese, and Korean. However, in the past, I've had much experience with German, Italian, Russian, and Swedish.
 									Last but not least, I really enjoy engaging with music (eg., jazz, flamenco, etc.), mathematics, cooking, and PC games. 
 								</p>
 							</article>
