--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
 								<p>Linguist, Researcher, Instructor</p>
-								<p>Chicago, USA</p>
+								<p>Northwestern University</p>
 							</div>
 						</div>
 						<nav>
