--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<div class="inner">
 								<h1>Devin Johnson</h1><br>
 								<h1>張旭堯</h1><br>
-								<p>Linguist, Researcher, Instructor</p>
+								<p>Theoretical Linguist, Researcher, Instructor</p>
 								<p>Northwestern University</p>
 							</div>
 						</div>
